src/test/deca/syntax/invalid/Objets/06InstructionOutsideMethod.deca
class Test {
    int x, y;
    float a;
    booelan b;

    x = x + 1;

    void printA() {
        print(a);
    }
}